--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-react": "^1.0.6",
     "antd": "^5.8.2",
     "axios": "^1.4.0",
-    "braft-editor": "^2.3.9",
     "echarts": "^5.4.3",
     "echarts-gl": "2.0.9",
     "lodash": "^4.17.21",
